--- a/paper.Rmd
+++ b/paper.Rmd
@@ -16,7 +16,7 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 summary(cars)
 ```
 
-Surprisingly, the size of the dataset is not very large.
+Surprisingly, the size of this dataset is not very large.
 
 ### Embedding plots
 
